--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "google-auth-library": "^10.4.0",
     "jszip": "^3.10.1",
     "lucide-react": "^0.542.0",
+    "mysql2": "^3.15.3",
     "next": "^14.2.3",
+    "node-fetch": "^3.3.2",
     "opentype.js": "^1.3.4",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
@@ -46,6 +48,7 @@
     "react-hot-toast": "^2.4.1",
     "recharts": "^2.15.4",
     "resend": "^6.1.1",
+    "sharp": "^0.34.4",
     "use-debounce": "^10.0.1",
     "zod": "^3.23.8"
   },
@@ -62,7 +65,9 @@
     "postcss": "^8.4.39",
     "tailwindcss": "^3.4.6",
     "tailwindcss-radix": "^2.8.0",
-    "typescript": "^5.5.4"
+    "ts-node": "^10.9.2",
+    "tsx": "^4.20.6",
+    "typescript": "^5.9.3"
   },
   "browserslist": [
     "> 0.5%",
