--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-email/render": "^1.3.1",
     "@react-pdf/renderer": "^3.4.5",
     "@supabase/ssr": "^0.7.0",
+    "@supabase/supabase-js": "^2.80.0",
     "@tabler/icons-react": "^3.34.1",
     "@tiptap/extension-image": "^2.5.7",
     "@tiptap/extension-link": "^2.5.7",
